--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,15 +11,34 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14' # 指定Node.js版本，根据您的需求进行调整
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+      
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: built-files
+          path: dist # 替换为你的构建输出目录
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: wkjovo/vue-demo-docker:2.0
+          tags: wkjovo/vue-demo-docker:3.0
